# codectrl-cxx-logger

./: .clang-format  .gitignore  .gitmodules  Makefile  README.md  meson.build
include/: backtrace_data.h  codectrl.h  log.h  meson.build
include/codectrl/: backtrace_data.h  can_to_string.h  log.h  log.hpp
protobuf-specifications/: backtrace_data.proto  cc_service.proto  inputs  log.proto  meson.build  outputs
protobuf-specifications/include/: meson.build
src/: backtrace_data.cpp  codectrl.cpp  log.cpp  meson.build
subprojects/: asio.wrap  boost_array.wrap  boost_assert.wrap  boost_config.wrap  boost_container_hash.wrap  boost_core.wrap  boost_detail.wrap  boost_integer.wrap  boost_predef.wrap  boost_stacktrace.wrap  boost_static_assert.wrap  boost_throw_exception.wrap  boost_type_index.wrap  boost_type_traits.wrap  grpc.wrap  jsoncons.wrap  libbacktrace.wrap  protobuf-specifications.wrap
subprojects/packagefiles/patches/asio.git/: meson.build
subprojects/packagefiles/patches/boost/array/: meson.build
subprojects/packagefiles/patches/boost/assert/: meson.build
subprojects/packagefiles/patches/boost/config/: meson.build
subprojects/packagefiles/patches/boost/container_hash/: meson.build
subprojects/packagefiles/patches/boost/core/: meson.build
subprojects/packagefiles/patches/boost/detail/: meson.build
subprojects/packagefiles/patches/boost/integer/: meson.build
subprojects/packagefiles/patches/boost/predef/: meson.build
subprojects/packagefiles/patches/boost/stacktrace/: meson.build
subprojects/packagefiles/patches/boost/static_assert/: meson.build
subprojects/packagefiles/patches/boost/throw_exception/: meson.build
subprojects/packagefiles/patches/boost/type_index/: meson.build
subprojects/packagefiles/patches/boost/type_traits/: meson.build
subprojects/packagefiles/patches/jsoncons.git/: meson.build
subprojects/packagefiles/patches/libbacktrace.git/: meson.build
subprojects/packagefiles/patches/protobuf-specifications/: glob  meson.build
tests/: log_if_env_send_test.cpp  log_if_send_test.cpp  log_send_test.cpp  log_when_env_send_test.cpp  meson.build
